--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,18 @@
-# Development language
 language: python
+dist: xenial
+python:
+  - "3.7"
+cache: pip
+before_install:
+  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - export PATH="$HOME/miniconda/bin:$PATH"
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  - conda info -a
+  - conda create -q -n dynamics python=$TRAVIS_PYTHON_VERSION
+  - source activate dynamics
+install:
+  - pip install -r requirements.txt
+script:
+  - python -m dynamics.test
